<resources>
    <string name="app_name" translatable="false">FindMyTruck</string>
    <string name="places_api" translatable="false">AIzaSyDQqGwhvhMOwbcbuhkZVZ5fp9lETjWno_Q</string>
    <string-array name="array_indian_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="array_indian_states_union_territory_codes">
        <item>AN</item>
        <item>AP</item>
        <item>AR</item>
        <item>AS</item>
        <item>BR</item>
        <item>CH/PB</item>
        <item>CG</item>
        <item>DD</item>
        <item>DD2</item>
        <item>DL</item>
        <item>GA</item>
        <item>GJ</item>
        <item>HR</item>
        <item>HP</item>
        <item>JK</item>
        <item>JH</item>
        <item>KA</item>
        <item>KL</item>
        <item>LA</item>
        <item>LD</item>
        <item>MP</item>
        <item>MH</item>
        <item>MN</item>
        <item>ML</item>
        <item>MZ</item>
        <item>NL</item>
        <item>OD</item>
        <item>PY</item>
        <item>PB</item>
        <item>RJ</item>
        <item>SK</item>
        <item>TN</item>
        <item>TS</item>
        <item>TR</item>
        <item>UK</item>
        <item>UP</item>
        <item>WB</item>
    </string-array>
    <string-array name="array_andhra_pradesh_districts">
        <item>Anantapur</item>
        <item>Chittoor</item>
        <item>East Godavari</item>
        <item>Guntur</item>
        <item>Kadapa</item>
        <item>Krishna</item>
        <item>Kurnool</item>
        <item>Nellore</item>
        <item>Prakasam</item>
        <item>Srikakulam</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>West Godavari</item>
    </string-array>
    <string-array name="array_arunachal_pradesh_districts">
        <item>Anjaw</item>
        <item>Siang</item>
        <item>Changlang</item>
        <item>Dibang Valley</item>
        <item>East Kameng</item>
        <item>East Siang</item>
        <item>Kamle</item>
        <item>Kra Daadi</item>
        <item>Kurung Kumey</item>
        <item>Lepa Rada</item>
        <item>Lohit</item>
        <item>Longding</item>
        <item>Lower Dibang Valley</item>
        <item>Lower Siang</item>
        <item>Lower Subansiri</item>
        <item>Namsai</item>
        <item>Pakke Kessang</item>
        <item>Papum Pare</item>
        <item>Shi Yomi</item>
        <item>Tawang</item>
        <item>Tirap</item>
        <item>Upper Siang</item>
        <item>Upper Subansiri</item>
        <item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="array_assam_districts">
        <item>Bajali</item>
        <item>Baksa</item>
        <item>Barpeta</item>
        <item>Biswanath</item>
        <item>Bongaigaon</item>
        <item>Cachar</item>
        <item>Charaideo</item>
        <item>Chirang</item>
        <item>Darrang</item>
        <item>Dhemaji</item>
        <item>Dhubri</item>
        <item>Dibrugarh</item>
        <item>Dima Hasao</item>
        <item>Goalpara</item>
        <item>Golaghat</item>
        <item>Hailakandi</item>
        <item>Hojai</item>
        <item>Jorhat</item>
        <item>Kamrup</item>
        <item>Kamrup Metropolitan</item>
        <item>Karbi Anglong</item>
        <item>Karimganj</item>
        <item>Kokrajhar</item>
        <item>Lakhimpur</item>
        <item>Majuli</item>
        <item>Morigaon</item>
        <item>Nagaon</item>
        <item>Nalbari</item>
        <item>Sivasagar</item>
        <item>Sonitpur</item>
        <item>South Salmara-Mankachar</item>
        <item>Tinsukia</item>
        <item>Udalguri</item>
        <item>West Karbi Anglong</item>
    </string-array>
    <string-array name="array_bihar_districts">
        <item>Araria</item>
        <item>Arwal</item>
        <item>Aurangabad</item>
        <item>Banka</item>
        <item>Begusarai</item>
        <item>Bhagalpur</item>
        <item>Bhojpur</item>
        <item>Buxar</item>
        <item>Darbhanga</item>
        <item>East Champaran</item>
        <item>Gaya</item>
        <item>Gopalganj</item>
        <item>Jamui</item>
        <item>Jehanabad</item>
        <item>Kaimur</item>
        <item>Katihar</item>
        <item>Khagaria</item>
        <item>Kishanganj</item>
        <item>Lakhisarai</item>
        <item>Madhepura</item>
        <item>Madhubani</item>
        <item>Munger</item>
        <item>Muzaffarpur</item>
        <item>Nalanda</item>
        <item>Nawada</item>
        <item>Patna</item>
        <item>Purnia</item>
        <item>Rohtas</item>
        <item>Saharsa</item>
        <item>Samastipur</item>
        <item>Saran</item>
        <item>Sheikhpura</item>
        <item>Sheohar</item>
        <item>Sitamarhi</item>
        <item>Siwan</item>
        <item>Supaul</item>
        <item>Vaishali</item>
        <item>West Champaran</item>
    </string-array>
    <string-array name="array_chhattisgarh_districts">
        <item>Balod</item>
        <item>Baloda Bazar</item>
        <item>Balrampur Ramanujganj</item>
        <item>Bastar</item>
        <item>Bemetara</item>
        <item>Bijapur</item>
        <item>Bilaspur</item>
        <item>Dantewada</item>
        <item>Dhamtari</item>
        <item>Durg</item>
        <item>Gariaband</item>
        <item>Gaurela Pendra Marwahi</item>
        <item>Janjgir Champa</item>
        <item>Jashpur</item>
        <item>Kabirdham</item>
        <item>Kanker</item>
        <item>Kondagaon</item>
        <item>Korba</item>
        <item>Koriya</item>
        <item>Mahasamund</item>
        <item>Mungeli</item>
        <item>Narayanpur</item>
        <item>Raigarh</item>
        <item>Raipur</item>
        <item>Rajnandgaon</item>
        <item>Sukma</item>
        <item>Surajpur</item>
        <item>Surguja</item>
    </string-array>
    <string-array name="array_goa_districts">
        <item>North Goa</item>
        <item>South Goa</item>
    </string-array>
    <string-array name="array_gujarat_districts">
        <item>Ahmedabad</item>
        <item>Amreli</item>
        <item>Anand</item>
        <item>Aravalli</item>
        <item>Banaskantha</item>
        <item>Bharuch</item>
        <item>Bhavnagar</item>
        <item>Botad</item>
        <item>Chhota Udaipur</item>
        <item>Dahod</item>
        <item>Dang</item>
        <item>Devbhoomi Dwarka</item>
        <item>Gandhinagar</item>
        <item>Gir Somnath</item>
        <item>Jamnagar</item>
        <item>Junagadh</item>
        <item>Kheda</item>
        <item>Kutch</item>
        <item>Mahisagar</item>
        <item>Mehsana</item>
        <item>Morbi</item>
        <item>Narmada</item>
        <item>Navsari</item>
        <item>Panchmahal</item>
        <item>Patan</item>
        <item>Porbandar</item>
        <item>Rajkot</item>
        <item>Sabarkantha</item>
        <item>Surat</item>
        <item>Surendranagar</item>
        <item>Tapi</item>
        <item>Vadodara</item>
        <item>Valsad</item>
    </string-array>
    <string-array name="array_haryana_districts">
        <item>Ambala</item>
        <item>Bhiwani</item>
        <item>Charkhi Dadri</item>
        <item>Faridabad</item>
        <item>Fatehabad</item>
        <item>Gurugram</item>
        <item>Hisar</item>
        <item>Jhajjar</item>
        <item>Jind</item>
        <item>Kaithal</item>
        <item>Karnal</item>
        <item>Kurukshetra</item>
        <item>Mahendragarh</item>
        <item>Mewat</item>
        <item>Palwal</item>
        <item>Panchkula</item>
        <item>Panipat</item>
        <item>Rewari</item>
        <item>Rohtak</item>
        <item>Sirsa</item>
        <item>Sonipat</item>
        <item>Yamunanagar</item>
    </string-array>
    <string-array name="array_himachal_pradesh_districts">
        <item>Bilaspur</item>
        <item>Chamba</item>
        <item>Hamirpur</item>
        <item>Kangra</item>
        <item>Kinnaur</item>
        <item>Kullu</item>
        <item>Lahaul Spiti</item>
        <item>Mandi</item>
        <item>Shimla</item>
        <item>Sirmaur</item>
        <item>Solan</item>
        <item>Una</item>
    </string-array>
    <string-array name="array_jammu_kashmir_districts">
        <item>Anantnag</item>
        <item>Bandipora</item>
        <item>Baramulla</item>
        <item>Budgam</item>
        <item>Doda</item>
        <item>Ganderbal</item>
        <item>Jammu</item>
        <item>Kathua</item>
        <item>Kishtwar</item>
        <item>Kulgam</item>
        <item>Kupwara</item>
        <item>Poonch</item>
        <item>Pulwama</item>
        <item>Rajouri</item>
        <item>Ramban</item>
        <item>Reasi</item>
        <item>Samba</item>
        <item>Shopian</item>
        <item>Srinagar</item>
        <item>Udhampur</item>
    </string-array>
    <string name="edit_number_hint">Enter 10 digit mobile number</string>
    <string name="name">Name*</string>
    <string name="name_hint">Enter your Name</string>
    <string name="location">Address*</string>
    <string name="select_state">State</string>
    <string name="select_city">City</string>
    <string name="pin_code">PIN Code</string>
    <string name="address">Type Address</string>
    <string name="are_u_sp">Truck Owner / Driver / Broker? </string>
    <string name="truck_owner">I"'"m a Truck Owner</string>
    <string name="driver">I"'"m a Driver</string>
    <string name="broker">I"'"m a Broker</string>
    <string name="ok">OK</string>
    <string name="customer">I"'"m a Load Poster</string>
    <string name="yes">YES</string>
    <string name="mobNo">+91</string>
    <string name="select_language">Please select your language</string>
    <string name="english">English</string>
    <string name="marathi">मराठी</string>
    <string name="hindi">हिंदी</string>
    <string name="company_name">Company Name*</string>
    <string name="company_address">Company Address*</string>
    <string name="company_name_hint">Enter Company Name</string>
    <string name="gst_number_hint">GST Number*</string>
    <string name="pan_number">PAN Number*</string>
</resources>