<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.activities.CompanyDetailsActivity">

    <include
        android:id="@+id/company_details_action_bar"
        layout="@layout/action_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/company_details_company_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/company_name"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_details_action_bar" />

    <EditText
        android:id="@+id/company_details_pan_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/pan_number"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_details_gst_number_edit" />

    <EditText
        android:id="@+id/company_details_company_name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/company_name_hint"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_details_company_name_text" />

    <EditText
        android:id="@+id/company_details_gst_number_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/gst_number_hint"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_details_company_name_edit" />

    <TextView
        android:id="@+id/company_details_company_address_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/company_address"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_details_pan_number" />

    <TextView
        android:id="@+id/company_details_select_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/edit_text_border"
        android:drawableEnd="@drawable/ic_down"
        android:drawableTint="@color/black"
        android:hint="@string/select_state"
        android:padding="20dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/company_details_select_city"
        app:layout_constraintEnd_toStartOf="@+id/company_details_select_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/company_details_select_city" />

    <TextView
        android:id="@+id/company_details_select_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_border"
        android:drawableEnd="@drawable/ic_down"
        android:drawableTint="@color/black"
        android:hint="@string/select_city"
        android:padding="20dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/company_details_address_edit"
        app:layout_constraintEnd_toStartOf="@+id/company_details_pin_code_edit"
        app:layout_constraintStart_toEndOf="@+id/company_details_select_state"
        app:layout_constraintTop_toBottomOf="@+id/company_details_company_address_text" />

    <EditText
        android:id="@+id/company_details_pin_code_edit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/pin_code"
        android:inputType="number"
        android:maxLength="6"
        android:padding="20dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/company_details_select_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/company_details_select_city"
        app:layout_constraintTop_toTopOf="@+id/company_details_select_city" />

    <EditText
        android:id="@+id/company_details_address_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/company_details_pin_code_edit"
        app:layout_constraintStart_toStartOf="@+id/company_details_select_state"
        app:layout_constraintTop_toBottomOf="@+id/company_details_select_city" />

    <Button
        android:id="@+id/company_details_ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_de_active"
        android:enabled="false"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:onClick="onClickCompanyDetailsOK"
        android:textColor="@color/background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_details_address_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>